syntax = "proto3";

package chef.automate.domain.ingest;
option go_package = "github.com/chef/automate/api/config/ingest";

import "api/config/shared/global.proto";
import "api/config/shared/tls.proto";
import "components/automate-grpc/protoc-gen-a2-config/api/a2conf/annotations.proto";
import "google/protobuf/wrappers.proto";

message ConfigRequest {
	option (chef.automate.api.service_config) = {name: "ingest-service"};

	reserved 1 to 2;

	V1 v1 = 3;

	message V1 {
		System sys = 1;
		Service svc = 2;

		message System {
			chef.automate.infra.config.Mlsa mlsa = 1;
			Service service = 2;
			chef.automate.infra.config.TLSCredentials tls = 3;
			Log log = 4;

			message Service {
				google.protobuf.StringValue host = 1;
				google.protobuf.Int32Value port = 2 [ (chef.automate.api.port) = { name: "service", default: 10122, protocol: "grpc" } ];
				// NOTE: purge actions are no longer configurable via config
				// and are now managed with gRPC endpoints. They are not
				// reserved so we can migrate the initial values from config to
				// to the purge cereal workflows.
				// Setting these values is prevented in the Validate() callback.
				google.protobuf.Int32Value purge_converge_history_after_days = 3 [deprecated = true];
				google.protobuf.Int32Value purge_actions_after_days = 4 [deprecated = true];
				reserved 5;
				google.protobuf.Int32Value max_number_of_bundled_run_msgs = 6;
				google.protobuf.Int32Value max_number_of_bundled_action_msgs = 7;
				google.protobuf.Int32Value number_of_run_msgs_transformers = 8;
				google.protobuf.Int32Value number_of_run_msg_publishers = 9;
			}

			message Log {
				google.protobuf.StringValue format = 1;
				google.protobuf.StringValue level = 2;
			}
		}

		message Service {
		}
	}
}
